--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,10 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">Hi, I'm John Doe. I do stuffs with computer and sometimes write about it here. I'm from Penang, MY and I ship code at <a href="#">Microsoft</a>.</p>
+    <p class="lead">
+  
+        Hello there, I am a bachelor (2016) information systems student at  <a href="https://en.wikipedia.org/wiki/Federal_University_of_Vales_do_Jequitinhonha_e_Mucuri">UFVJM</a> (Universidade do Vale do Jequitinhonha e Mucuri)  based on Diamantina, MG - Brasil.
+
+      
+    </p>
   </div>
 </section>
